[gd_scene load_steps=4 format=3 uid="uid://df4fbl77aun41"]

[ext_resource type="Script" path="res://ball_toucher.gd" id="1_ay80v"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5fteq"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_sr7dd"]

[node name="ball_toucher" type="Area2D"]
light_mask = 2
priority = 2
script = ExtResource("1_ay80v")

[node name="shape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5fteq")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
scale = Vector2(16, 16)
texture = SubResource("PlaceholderTexture2D_sr7dd")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
